# templates

py/example/: README.md  activate.sh  pyproject.toml
py/example/src/example/: __init__.py  main.py
py/example/tests/: example_test.py
ts/example-react-vite/: README.md  package-lock.json  package.json
ts/example-react-vite/src/: App.css  App.tsx  DebugOutput.tsx  index.css
ts/example-react-vite/src/example/: Example.tsx  SharedCounter.tsx  context.tsx  sharedState.ts
